--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=tugas_individu_going_to_php
+APP_NAME=anyeong
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASS=Kuliah22!
 DB_NAME=anyeongdb
 
 # BASEURL
-BASEURL=http://localhost/
+BASEURL=http://localhost/anyeong
