--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
-RewriteBase /porthub/
+RewriteBase /anyeong/
 RewriteRule ^index\\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /porthub/index.php [L]
+RewriteRule . /anyeong/index.php [L]
